--- a/styles/globals.css
+++ b/styles/globals.css
@@ -114,7 +114,7 @@ ul {
   height: 100%;
 }
 
-.swiper-slide {
+.mySwiper > .swiper-wrapper > .swiper-slide {
   height: 100%;
   width: 100%;
   display: flex;
@@ -125,10 +125,10 @@ ul {
 }
 
 /* Custom Scrollbar for slides */
-.swiper-slide::-webkit-scrollbar {
+.mySwiper > .swiper-wrapper > .swiper-slide::-webkit-scrollbar {
   width: 4px;
 }
-.swiper-slide::-webkit-scrollbar-thumb {
+.mySwiper > .swiper-wrapper > .swiper-slide::-webkit-scrollbar-thumb {
   background: var(--main-color);
   border-radius: 10px;
 }
